--- a/index.html
+++ b/index.html
@@ -4,9 +4,97 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Головна</title>
+    <link rel="preconnect" href="./font/stylesheet.css">
+    <link rel="stylesheet" href="./css/modern-normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
-<body>
+<body>    
+    <header>
+        <section>
+            <ul>
+                <li>
+                     <a href="#"><img src="./image/logo.png" alt="Логотип"> </a> 
+                </li>
+                <li>
+                    <a href="tel:+380682021840" alt="телефон">+38(068)202-18-40</a>
+                </li>
+                <li>
+                    <a href="#">Наші салони <img src="./image/treug_vniz.png" alt="буде кнопка"></a>
+                </li>
+                <li>
+                    <a href="#"> <button type="button"> <img src="./image/simple-line-icons_eye.png" alt="версія для людей з вадами зору">версія для людей з вадами зору</button></a>
+                </li>
+                <li>
+                    <a href="#"> <img src="./image/vk.png" alt="вк"></a>
+                </li>
+                <li>
+                    <a href="#"> <img src="./image/youtube.png" alt="ютуб"></a>
+                </li>
+                <li>
+                    <a href="#"> <img src="./image/facebook.png" alt="фейсбук"></a>
+                </li>
+                <li><a href="#"> <img src="./image/instagram.png" alt="інстаграм"></a></li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Косметологія</a>
+                </li>
+                <li>
+                    <a href="#">Пластична хірургія</a>
+                </li>
+                <li>
+                    <a href="#">Стоматологія</a>
+                </li>
+                <li>
+                    <a href="#">Лазерна медицина</a>
+                </li>
+                <li>
+                    <a href="#">Контакти</a>
+                </li>
+                <li>
+                    <a href="#"> <button type="button">Запис на прийом</button></a>
+                </li>
+            </ul>
+        </section>
+    </header>
+
+    <main>
+        <section>
+            <h1>
+                Косметологія
+            </h1>
+            <p>
+                Сучасний світ диктує нові канони життя: доглянуте обличчя і тіло,
+                струнка, підтягнута постать — сьогодні це невід'ємні
+                риси привабливої ​​зовнішності, що характеризують людину
+                благополучну та успішну.
+            </p>
+            <button type="button">Детальніше</button>
+            <img src="./image/mask.jpg" alt="Дівчині роблять маску" width="746px">
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <a href="#">Комплексні процедури</a>
+                </li>
+                <li>
+                    <a href="#">Центр навчання</a>
+                </li>
+                <li>
+                    <a href="#">VIP клієнтам</a>
+                </li>
+            </ul>
+        </section>
+    </main>
+    
+
+    <footer>
+        <section>
+
+        </section>
+    </footer>
     
 </body>
 </html>
